@@ -353,14 +353,34 @@ class TestGridShape < Test::Unit::TestCase
   assert_in_delta( 1.0, deriv[0], tol)
 
   delta = 1.0e-8
+  tol=delta
+
   n0 = [delta, 0, 0]
   p = @g.shapeJacobianDetDeriv2(n0,n1,n2,n3,e01,e02,e03,e12,e13,e23,where)
   n0 = [-delta, 0, 0]
   m = @g.shapeJacobianDetDeriv2(n0,n1,n2,n3,e01,e02,e03,e12,e13,e23,where)
   fd = (p[0]-m[0])/delta*0.5
 
-  tol=delta
   assert_in_delta( fd, deriv[1], tol)
+  assert_in_delta(-3.0, deriv[1], tol)
+
+  n0 = [0, delta, 0]
+  p = @g.shapeJacobianDetDeriv2(n0,n1,n2,n3,e01,e02,e03,e12,e13,e23,where)
+  n0 = [0, -delta, 0]
+  m = @g.shapeJacobianDetDeriv2(n0,n1,n2,n3,e01,e02,e03,e12,e13,e23,where)
+  fd = (p[0]-m[0])/delta*0.5
+
+  assert_in_delta( fd, deriv[2], tol)
+  assert_in_delta(-3.0, deriv[2], tol)
+
+  n0 = [0, 0, delta]
+  p = @g.shapeJacobianDetDeriv2(n0,n1,n2,n3,e01,e02,e03,e12,e13,e23,where)
+  n0 = [0, 0, -delta]
+  m = @g.shapeJacobianDetDeriv2(n0,n1,n2,n3,e01,e02,e03,e12,e13,e23,where)
+  fd = (p[0]-m[0])/delta*0.5
+
+  assert_in_delta( fd, deriv[3], tol)
+  assert_in_delta(-3.0, deriv[3], tol)
 
  end
 
