@@ -1,3 +1,8 @@
+2005-06-07 12:39 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridshape.c (gridShapeJacobianDetDeriv2) added a differentiated
+	version of gridShapeJacobianDet2
+
 2005-06-07 10:30 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridshape.c (gridShapeJacobianDet2) added as a target for
